More memory for sbt and sbt run command